--- a/README
+++ b/README
@@ -7,7 +7,7 @@
 С этим удобным приложением вам не придется постоянно держать в голове кучу
 забот. Все станет легко и понятно.
 --------------------------------------------------------------------------
-Our project TODO_List is being prepared for usage a new way of keeping
+Our project TODO_List is being prepared for using a new way of keeping
 data due to XMLHttpRequest().
 The application is employed for creating your own todo_list, which can be
 marked or deleted by its implementation/
